--- a/WebHotel/WebHotel.WebApp/Views/Shared/_Header.cshtml
+++ b/WebHotel/WebHotel.WebApp/Views/Shared/_Header.cshtml
@@ -162,7 +162,7 @@ bg-white border-bottom box-shadow">
                            asp-area=""
                            asp-controller="Blog"
                            asp-action="Index">
-                            <i class="fa fa-home" aria-hidden="true"></i> Phòng
+                            <i class="fa fa-bed" aria-hidden="true"></i> Phòng
                         </a>
                     </li>
                     <li class="list-group-item py-1">
@@ -171,7 +171,7 @@ bg-white border-bottom box-shadow">
                            asp-controller="Blog"
                            asp-action="Service"
                            title="Dịch vụ khách sạn">
-                            Dịch Vụ
+                            <i class="fa fa-bath" aria-hidden="true"></i> Dịch Vụ
                         </a>
                     </li>
                     <li class="list-group-item py-1">
@@ -180,7 +180,7 @@ bg-white border-bottom box-shadow">
                            asp-controller="Blog"
                            asp-action="Hotel"
                            title="Danh sách khách sạn">
-                            Khách sạn
+                            <i class="fa fa-building-o" aria-hidden="true"></i> Khách sạn
                         </a>
                     </li>
                     <li class="list-group-item py-1">
@@ -189,7 +189,7 @@ bg-white border-bottom box-shadow">
                            asp-controller="Blog"
                            asp-action="Template"
                            title="Danh sách Template">
-                            Templates
+                            <i class="fa fa-home" aria-hidden="true"></i> Templates
                         </a>
                     </li>
                     <li class="list-group-item py-1">
@@ -198,7 +198,7 @@ bg-white border-bottom box-shadow">
                            asp-controller="Blog"
                            asp-action="Folder"
                            title="Danh sách Folder">
-                            Folder
+                            <i class="fa fa-folder-o" aria-hidden="true"></i> Folder
                         </a>
                     </li>
                     <li class="list-group-item py-1">
@@ -207,7 +207,7 @@ bg-white border-bottom box-shadow">
                            asp-controller="Blog"
                            asp-action="Filer"
                            title="Danh sách Filer">
-                            Filer
+                            <i class="fa fa-file-code-o" aria-hidden="true"></i> Filer
                         </a>
                     </li>
                     <li class="list-group-item py-1">
@@ -216,7 +216,7 @@ bg-white border-bottom box-shadow">
                            asp-controller="Blog"
                            asp-action="Employee"
                            title="Danh sách nhân viên">
-                            Nhân viên
+                            <i class="fa fa-user-o" aria-hidden="true"></i> Nhân viên
                         </a>
                     </li>
                     <li class="list-group-item py-1">
@@ -225,7 +225,7 @@ bg-white border-bottom box-shadow">
                            asp-controller="Blog"
                            asp-action="Customer"
                            title="Danh sách khách hàng">
-                            Khách hàng
+                            <i class="fa fa-users" aria-hidden="true"></i> Khách hàng
                         </a>
                     </li>
                     <li class="list-group-item py-1">
@@ -234,35 +234,15 @@ bg-white border-bottom box-shadow">
                            asp-controller="Blog"
                            asp-action="Booking"
                            title="Danh sách Booking">
-                            Booking
+                            <i class="fa fa-hand-pointer-o" aria-hidden="true"></i> Booking
                         </a>
                     </li>
                 </ul>
                 <!-- Collapse 1 -->
                 <!-- Collapse 2 -->
-                <a class="list-group-item list-group-item-action py-2 ripple"
-                   aria-current="true"
-                   data-mdb-toggle="collapse"
-                   href="#collapseExample2"
-                   aria-expanded="true"
-                   aria-controls="collapseExample2">
-                    <i class="fas fa-chart-area fa-fw me-3"></i><span>Collapsed menu</span>
-                </a>
+               
                 <!-- Collapsed content -->
-                <ul id="collapseExample2" class="collapse list-group list-group-flush">
-                    <li class="list-group-item py-1">
-                        <a href="" class="text-reset">Link</a>
-                    </li>
-                    <li class="list-group-item py-1">
-                        <a href="" class="text-reset">Link</a>
-                    </li>
-                    <li class="list-group-item py-1">
-                        <a href="" class="text-reset">Link</a>
-                    </li>
-                    <li class="list-group-item py-1">
-                        <a href="" class="text-reset">Link</a>
-                    </li>
-                </ul>
+                
                 <!-- Collapse 2 -->
             </div>
         </div>
