--- a/WebHotel/WebHotel.WebApp/Views/Blog/Employee.cshtml
+++ b/WebHotel/WebHotel.WebApp/Views/Blog/Employee.cshtml
@@ -10,6 +10,7 @@
     <form asp-area=""
           asp-controller="Blog"
           asp-action="Employee"
+          class="d-flex justify-content-center"
           method="get">
         <partial name="_SearchForm" />
     </form>
@@ -22,10 +23,14 @@
             Những nhân viên có tên '@employeeQuery.Keyword'
         </h3>
     }
+    <section id="gallery">
 
+        <div class="row">
     @foreach (var employeeItem in Model)
     {
         <partial name="_EmployeeItem" model="employeeItem" />
     }
-    
+</div>
+        </div>
+    </section>
 </div>
