--- a/WebHotel/WebHotel.WebApp/Views/Blog/Template.cshtml
+++ b/WebHotel/WebHotel.WebApp/Views/Blog/Template.cshtml
@@ -10,6 +10,7 @@
     <form asp-area=""
           asp-controller="Blog"
           asp-action="Template"
+          class="d-flex justify-content-center"
           method="get">
         <partial name="_SearchForm" />
     </form>
@@ -22,10 +23,13 @@
             Những Template chứa từ khóa '@templateQuery.Keyword'
         </h3>
     }
+    <section id="gallery">
 
+        <div class="row">
     @foreach (var templateItem in Model)
     {
         <partial name="_TemplateItem" model="templateItem" />
     }
-    
+        </div>
 </div>
+    </section>
